--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <Title>Web App</Title>
 </head>
 <body>
-  <div>
+  <div style="background-color: blue">
     <p>Hello World!</p>
+  </div>
+  <div style="background-color: green">
+    <p>Hello deployment process!</p>
   </div>
 </body>
 </html>
