--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
+  <link rel="stylesheet" href="css/device.css" type="text/css">
   <Title>Web App</Title>
 </head>
 <body>
@@ -15,5 +16,16 @@
   <div style="background-color: green">
     <p>Hello deployment process!</p>
   </div>
+  <div id="element-dpad">
+            <div id="dpad-touch-target" class="dpad-touch-target">
+              <div id="dpad" class="dpad">
+                <div id="dpad-up" class="element up top arrow"></div>
+                <div id="dpad-left" class="element left middle arrow"></div>
+                <div id="dpad-down" class="element down bottom arrow"></div>
+                <div id="dpad-right" class="element right middle arrow"></div>
+                <div class="element center middle"></div>
+              </div>
+            </div>
+</div>
 </body>
 </html>
