--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
+  <!-- iPad Portrait -->
+  <link href="/defaults/apple-touch-startup-image-1536x2008.png"
+        media="(device-width: 768px) and (device-height: 1024px)"
+        rel="apple-touch-startup-image">
+  <!-- iPad Landscape -->
+  <link href="/defaults/apple-touch-startup-image-2048x1496.png"
+        media="(device-width: 1024px) and (device-height: 768px)"
+        rel="apple-touch-startup-image">
+  
   <link rel="stylesheet" href="css/device.css" type="text/css">
   <Title>Web App</Title>
 </head>
