--- a/index.html
+++ b/index.html
@@ -36,5 +36,9 @@
       </div>
     </div>
   </div>
+  
+  <script type="text/javascript" src="js/jquery-3.0.0.min.js" />
+  
+  <script type="text/javascript" src="js/utilities.js" />
 </body>
 </html>
