--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     </div>
   </div>
   
-  <script type="text/javascript" src="js/jquery-3.0.0.min.js" />
+  <script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>
   
-  <script type="text/javascript" src="js/utilities.js" />
+  <script type="text/javascript" src="js/utilities.js"></script>
 </body>
 </html>
