--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
   <div style="background-color: green">
     <p>Hello deployment process!</p>
   </div>
+  <div id="message">Message space</div>
   <div id="element-dpad">
     <div id="dpad-touch-target" class="dpad-touch-target">
       <div id="dpad" class="dpad">
         <div id="dpad-up" class="element up top arrow"></div>
         <div id="dpad-left" class="element left middle arrow"></div>
-        <div id="dpad-down" class="element down bottom arrow"></div>
         <div id="dpad-right" class="element right middle arrow"></div>
         <div class="element center middle"></div>
       </div>
+        <div id="dpad-down" class="element down bottom arrow"></div>
     </div>
   </div>
   
