--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
       <div id="dpad" class="dpad">
         <div id="dpad-up" class="element up top arrow"></div>
         <div id="dpad-left" class="element left middle arrow"></div>
+        <div id="dpad-down" class="element down bottom arrow"></div>
         <div id="dpad-right" class="element right middle arrow"></div>
         <div class="element center middle"></div>
-        <div id="dpad-down" class="element down bottom arrow"></div>
+      </div>
     </div>
   </div>
   
