--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
     </div>
   </div>
   
+  <div id="element-screen">
+    <div id="display">
+      <canvas id="monitor" class="display" width="640" height="480"></canvas>
+      <div id="LCD-dropshadow"></div>
+    </div>
+  </div>
+  
   <script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>
   
   <script type="text/javascript" src="js/utilities.js"></script>
