--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
     </div>
   </div>
   
-  <div id="element-screen">
-    <div id="display">
-      <canvas id="monitor" class="display" width="640" height="480"></canvas>
-      <div id="LCD-dropshadow"></div>
+  <div id="display">
+    <div id="screen" class ="display">
+      <canvas id="sprite-layer" class="display screen" width="640" height="480"></canvas>
     </div>
   </div>
   
