--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     </div>
   </div>
   
+  <img src="images/firered-leafgreen.png" class="image-lib">
+  <img src="images/firered-leafgreen.png" class="image-lib">
+  
   <script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>
   
   <script type="text/javascript" src="js/utilities.js"></script>
