--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     </div>
   </div>
   
-  <img src="images/firered-leafgreen.png" class="image-lib">
-  <img src="images/firered-leafgreen.png" class="image-lib">
+  <img src="images/firered-leafgreen.png" id="front-sprite" class="image-lib">
+  <img src="images/firered-leafgreen-back.png" id="back-sprite" class="image-lib">
   
   <script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>
   
